--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -17,9 +17,7 @@
         <div class="profile__info">
           <h3>{{user.username}}</h3>
           <p>@{{user.username}}</p>
-          {% if request.user == user %}
-          <a href="{% url 'update-user' %}" class="btn btn--main btn--pill">Edit Profile</a>
-          {% endif %}
+          <a href="edit-user.html" class="btn btn--main btn--pill">Edit Profile</a>
         </div>
         <div class="profile__about">
           <h3>About</h3>
@@ -33,7 +31,7 @@
 
       <div class="roomList__header">
         <div>
-          <h2>Study Rooms Hosted by {{user.username}}</a>
+          <h2>Study Rooms Hosted by dennis_ivy</a>
           </h2>
         </div>
       </div>
