--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -32,7 +32,7 @@
           <div class="roomList__header">
             <div>
               <h2>Study Room</h2>
-              <p>{{room_count}} Rooms available</p>
+              <p>Rooms available</p>
             </div>
             <a class="btn btn--main" href="{% url 'create-room' %}">
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
