--- a/base/templates/base/topics.html
+++ b/base/templates/base/topics.html
@@ -33,11 +33,11 @@
 
       <ul class="topics__list">
         <li>
-          <a href="{% url 'topics-page' %}" class="active">All <span>{{topics.count}}</span></a>
+          <a href="{% url 'topics-page' %}" class="active">All <span></span></a>
         </li>
         {% for topic in topics %} 
         <li>
-          <a href="{% url 'home' %}?q={{topic.name}}">{{ topic.name }}<span>{{ topic.room_set.all.count }}</span></a>
+          <a href="{% url 'home' %}?q={{topic.name}}">{{ topic.name }}<span></span></a>
         </li>
         {% endfor %}
       </ul>
